<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学习助手</string>
    
    <string name="progress_message">正在载入中</string>
    
    <string name="alert_login_failed_title">登入失败</string>
    <string name="alert_login_failed_message">您输入的用户名或密码错误，请重试！</string>
    <string name="alert_login_failed_pos">确定</string>
    
    <string name="alert_new_version_title">有新版本</string>
    <string name="alert_new_version_message">当前有新的版本，是否更新？</string>
    <string name="alert_new_version_pos">暂不更新</string>
    <string name="alert_new_version_neg">前往更新</string>
    
    <string name="alert_must_update_title">版本错误</string>
    <string name="alert_must_update_message">检测到您的客户端当前版本过低，必须更新！</string>
    <string name="alert_must_update_pos">前往更新</string>
    <string name="alert_must_update_neg">退出应用</string>
    
    <string name="alert_connect_error_title">网络异常</string>
    <string name="alert_connect_error_message">检测到服务端响应异常！</string>
    <string name="alert_connect_error_pos">确定</string>
    
    <string name="alert_connect_exception_title">网络异常</string>
    <string name="alert_connect_exception_message">检测到未知的网络错误，连接中断！</string>
    <string name="alert_connect_exception_pos">确定</string>
    
    <string name="alert_network_setting_failed_title">设置错误</string>
    <string name="alert_network_setting_failed_message">检测到您当前的网络测试错误，无法启动应用，请检查！</string>
    <string name="alert_network_setting_failed_pos">网络设置</string>
    <string name="alert_network_setting_failed_neg">退出应用</string>
    
    <string name="activity_login_copyright">版权所有</string>
	<string name="activity_login_edittext_hint_user">请输入用户名</string>
	<string name="activity_login_edittext_hint_pwd">请输入密码</string>
	
	<string name="title_login">登入</string>
	<string name="title_main">学习助手</string>
	<string name="title_quest">请答题</string>
	<string name="title_select">选择试题</string>
	
	<string name="activity_main_item_quest">阶段测试</string>
	<string name="activity_main_item_album">学习资料</string>
	<string name="activity_main_item_message">消息提问</string>
	<string name="activity_main_item_telephone">电话支持</string>
	<string name="activity_main_item_share">经验分享</string>
	<string name="activity_main_item_setting">系统设置</string>
	
	<string name="title_message">消息提问</string>
	<string name="dialog_message_label_phone">电话号码</string>
	<string name="dialog_message_label_message_content">消息内容</string>
	<string name="dialog_message_hint_content">请在此处输入消息内容</string>
	<string name="dialog_message_btn_send">发送</string>
	<string name="dialog_message_btn_cancel">取消</string>
	<string name="dialog_message_send_success">消息成功发送到：</string>
	<string name="dialog_message_send_no_input">消息内容不能为空</string>
	
	<string name="title_phone">电话支持</string>
	<string name="title_album">学习相册</string>
	
	<string name="activity_select_label_0">请选择试题：</string>
	<string name="activity_select_label_1">试题概述：</string>
	<string name="activity_select_enter_text">开始答题</string>
	
	<string name="activity_quest_radio_choose">选择题</string>
	<string name="activity_quest_radio_answer">问答题</string>
	<string name="activity_quest_radio_coding">编码题</string>
	
	
    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_openshare_custom">打开自定义分享面板</string>
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享更多平台</string>

    <string name="umeng_shakeshotscreen">摇一摇截屏</string>
    <string name="umeng_shakeshare">摇一摇分享</string>
    <string name="umeng_registershake">注册摇一摇</string>

    <string name="umeng_comment1">用户信息</string>
    <string name="umeng_comment2">本地登陆</string>
    <string name="umeng_comment3">本地授权</string>
    <string name="umeng_comment4">好友功能</string>
    <string name="umeng_comment5">评论功能</string>
    <string name="umeng_comment6">注销</string>
    <string name="umeng_comment7">解决事例</string>

    <string name="umeng_nativequery">本地登陆信息查询</string>
    <string name="umeng_loginsina">登陆新浪</string>
    <string name="umeng_logoutsina">登出新浪</string>
    <string name="umeng_loginqq">登陆QQ</string>
    <string name="umeng_logoutqq">登出QQ</string>
    <string name="umeng_loginqzone">登陆QQ空间</string>
    <string name="umeng_logoutzone">登出QQ空间</string>
    <string name="umeng_customlogin">自定义登陆</string>

    <string name="umeng_addfriend">添加好友</string>
    <string name="umeng_getfriendlist">获取好友列表</string>

    <string name="umeng_commentmodular">评论模块</string>
    <string name="umeng_getcommentlist">获取评论列表</string>
    <string name="umeng_sendcomment">发出评论</string>

    <string name="action_settings">设置</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">487692214752558</string>
    <string name="perm">需要权限:</string>
</resources>
