<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="@dimen/activity_main_linearlayout_padding" >
    
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/shape_frame_2" >

        <android.support.v4.view.PagerTitleStrip
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_main_pager_strip_padding_left_right"
            android:paddingRight="@dimen/activity_main_pager_strip_padding_left_right"
            android:paddingTop="@dimen/activity_main_pager_strip_padding_top_bottom"
            android:paddingBottom="@dimen/activity_main_pager_strip_padding_top_bottom"
            android:background="@drawable/shape_frame_1"
            android:layout_gravity="bottom" />

    </android.support.v4.view.ViewPager>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_main_tablelayout_margin_top"
        android:layout_weight="2"
        android:background="@drawable/shape_frame_1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/item_quest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/activity_main_item_padding"
                android:background="@drawable/selector_main_item"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_icon_quests" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/activity_main_item_quest"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/activity_main_item_padding"
                android:background="@drawable/selector_main_item"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_icon_album" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/activity_main_item_album"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/activity_main_item_padding"
                android:background="@drawable/selector_main_item"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_icon_message" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/activity_main_item_message"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_1"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/item_telephone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/activity_main_item_padding"
                android:background="@drawable/selector_main_item"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_icon_telephone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/activity_main_item_telephone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/activity_main_item_padding"
                android:background="@drawable/selector_main_item"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_icon_share" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/activity_main_item_share"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/activity_main_item_padding"
                android:background="@drawable/selector_main_item"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_icon_setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/activity_main_item_setting"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_1"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>